2005-10-02  Casey Marshall  <csm@gnu.org>

	* gnu/javax/crypto/DiffieHellmanImpl.java (random): removed.
	(<init>): removed 'random' initialization.
	(engineDoPhase): use params from the incoming key; generate the
	intermediate result from the incoming key, not a random one; only
	support one-phase DH, for now.
	(engineInit): removed 'random' initialization.

2005-10-02  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/xml/stream/XMLOutputFactoryImpl.java:
	(setProperty): Added 'else'.

2005-10-02  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * gnu/CORBA/CDR/Vio.java,
        gnu/CORBA/CDR/cdrBufOutput.java,
        gnu/CORBA/CDR/gnuRuntime.java,
        gnu/javax/rmi/CORBA/corbaObjectInput.java,
        gnu/javax/rmi/CORBA/dwoTester.java,
        gnu/javax/rmi/CORBA/gnuRmiUtil.java: Corrected copyright 
        header identation.

2005-10-02  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/CDR/ArrayValueHelper.java,
	gnu/CORBA/CDR/IDLTypeHelper.java,
	gnu/CORBA/CDR/UnknownExceptionCtxHandler.java,
	gnu/CORBA/CDR/gnuRuntime.java,
	gnu/CORBA/CDR/gnuValueStream.java,
	gnu/CORBA/CDR/VMVio.java,
	gnu/CORBA/IorProvider.java,
	gnu/javax/rmi/CORBA/TieTargetRecord.java,
	gnu/javax/rmi/CORBA/ValueHandlerDelegateImpl.java,
	gnu/javax/rmi/CORBA/corbaObjectInput.java,
	gnu/javax/rmi/CORBA/corbaObjectOutput.java,
	gnu/javax/rmi/CORBA/dwoTester.java,
	gnu/javax/rmi/CORBA/gnuRmiUtil.java: New files.
	* gnu/CORBA/CDR/aligningInputStream.java,
	gnu/CORBA/CDR/aligningOutputStream.java:
	gnu/CORBA/CDR/Vio.java,
	gnu/CORBA/CDR/cdrBufInput.java,
	gnu/CORBA/CDR/cdrBufOutput.java,
	gnu/CORBA/CDR/cdrInput.java,
	gnu/CORBA/CDR/cdrOutput.java,
	gnu/CORBA/CDR/noHeaderInput.java,
	gnu/CORBA/Functional_ORB.java,
	gnu/CORBA/GIOP/MessageHeader.java,
	gnu/CORBA/GIOP/ServiceContext.java,
	gnu/CORBA/IOR_Delegate.java,
	gnu/CORBA/IOR_contructed_object.java,
	gnu/CORBA/Interceptor/Registrator.java,
	gnu/CORBA/NamingService/NameParser.java,